charts/ms-apps/v6.0.0/templates/network-policy/allow-to-external.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-external-from-all
spec:
  podSelector: {}
  egress:
  - to: []
