charts/ms-apps/v6.0.0/templates/network-policy/datarouter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: datarouter
spec:
  podSelector:
    matchLabels:
      app: datarouter-test
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: tomcat
  - to:
    - podSelector:
        matchLabels:
          app: elasticsearch
    ports:
    - protocol: TCP
      port: 9300
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  ingress:
  - {}
