charts/ms-apps/v6.0.0/templates/network-policy/elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch
spec:
  podSelector:
    matchLabels:
      app: elasticsearch
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tomcat
    - podSelector:
        matchLabels:
          app: datarouter
    ports:
    - protocol: TCP
      port: 9300
  egress: []
