charts/ms-apps/v6.0.0/templates/network-policy/oracle.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oracle
spec:
  podSelector:
    matchLabels:
      app: oracle
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tomcat
    - podSelector:
        matchLabels:
          app: logstash
    ports:
    - protocol: TCP
      port: 1521
  egress: []
