charts/ms-apps/v6.0.0/templates/network-policy/tomcat.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tomcat
spec:
  podSelector:
    matchLabels:
      app: tomcat-test
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: datarouter
  - from:      
    - namespaceSelector:
        matchLabels:
          hasNginxPod: "true"
    - ipBlock:
        cidr: 10.42.3.0/32
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: elasticsearch
    ports:
    - protocol: TCP
      port: 9300
  - to:
    - podSelector:
        matchLabels:
          app: activemq
    ports:
    - protocol: TCP
      port: 61616
  - to:
    - podSelector:
        matchLabels:
          app: mongo
    ports:
    - protocol: TCP
      port: 27017
  - to:
    - podSelector:
        matchLabels:
          app: oracle
    ports:
    - protocol: TCP
      port: 1521
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
